--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "formik": "^2.2.9",
+        "lodash": "^4.17.21",
         "materialize-css": "^1.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -16,6 +17,7 @@
         "react-router-dom": "^6.4.2",
         "react-scripts": "5.0.1",
         "sass": "^1.55.0",
+        "uuid": "^9.0.0",
         "web-vitals": "^2.1.4",
         "yup": "^0.32.11"
     },
